[gd_scene load_steps=7 format=3 uid="uid://dyfk3j2645din"]

[ext_resource type="Script" uid="uid://v0f6r3662ccd" path="res://hud.gd" id="1_8sq4i"]
[ext_resource type="Texture2D" uid="uid://cttpwr04efk12" path="res://Assets/UI/backpack.png" id="2_64ctp"]
[ext_resource type="Script" uid="uid://euwydrac4x17" path="res://use_slot.gd" id="3_8sq4i"]
[ext_resource type="Texture2D" uid="uid://bfdwou8c6gpwp" path="res://Assets/UI/coins_icon_64x.png" id="4_640wx"]
[ext_resource type="Texture2D" uid="uid://bk2a6ecdv5hvt" path="res://Assets/UI/timber_icon_64.png" id="5_a2258"]

[sub_resource type="CanvasTexture" id="CanvasTexture_8sq4i"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_8sq4i")

[node name="Backpack" type="Control" parent="."]
z_as_relative = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 200.0
grow_vertical = 0

[node name="TextureButton" type="TextureButton" parent="Backpack"]
layout_mode = 1
offset_right = 500.0
offset_bottom = 500.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("2_64ctp")

[node name="UseSlot" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(72, 72)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -110.0
offset_right = 260.0
offset_bottom = -50.0
grow_vertical = 0
size_flags_vertical = 8
script = ExtResource("3_8sq4i")

[node name="Map" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -415.5
offset_top = -237.0
offset_right = 415.5
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
texture = SubResource("CanvasTexture_8sq4i")

[node name="TopPanel" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Time" type="HBoxContainer" parent="TopPanel"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Day" type="Label" parent="TopPanel/Time"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1

[node name="Time" type="Label" parent="TopPanel/Time"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1

[node name="Resources" type="HBoxContainer" parent="TopPanel"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 50

[node name="Gold" type="VFlowContainer" parent="TopPanel/Resources"]
layout_mode = 2
theme_override_constants/h_separation = 20
alignment = 1

[node name="Icon" type="TextureRect" parent="TopPanel/Resources/Gold"]
layout_mode = 2
texture = ExtResource("4_640wx")

[node name="Amount" type="Label" parent="TopPanel/Resources/Gold"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 2

[node name="Wood" type="VFlowContainer" parent="TopPanel/Resources"]
layout_mode = 2
theme_override_constants/h_separation = 20
alignment = 1

[node name="Icon" type="TextureRect" parent="TopPanel/Resources/Wood"]
layout_mode = 2
texture = ExtResource("5_a2258")

[node name="Amount" type="Label" parent="TopPanel/Resources/Wood"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 2

[connection signal="mouse_entered" from="Backpack/TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="Backpack/TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="Backpack/TextureButton" to="." method="_on_texture_button_pressed"]
